QOL-5651 - Fix aggregation page spacing issues

--- a/src/assets/_project/_blocks/layout/_pagemodels/_aggregation.scss
+++ b/src/assets/_project/_blocks/layout/_pagemodels/_aggregation.scss
@@ -1,4 +1,10 @@
 .aggregation-index {
+  #qg-primary-content {
+    margin-top: 2rem;
+  }
+  .qg-primary-content_notice {
+    margin-bottom: 2rem;
+  }
   .additional-information {
     h2 {
       font-size: 1.56rem;
