--- a/src/assets/_project/_blocks/layout/content/content-types/_call-out-box.scss
+++ b/src/assets/_project/_blocks/layout/content/content-types/_call-out-box.scss
@@ -4,7 +4,7 @@
   padding: 2em 1em;
   width: 100%;
   box-sizing: border-box;
-  margin: 1em auto;
+  margin: 0 auto;
   overflow: hidden;
   a.qg-btn {
     float: left;
